# object-unsafe

./: .gitattributes  .gitignore  LICENSE  README.MD  pom.xml
clib/JNI_LIB/: CMakeLists.txt  UnsafeObjectModify.cpp  UnsafeObjectRead.cpp  cn_lingex_unsafe_UnsafeObjectModify.h  cn_lingex_unsafe_UnsafeObjectRead.h
src/main/java/: module-info.java
src/main/java/cn/lingex/unsafe/: Main.java  UnsafeObjectModify.java  UnsafeObjectRead.java
src/test/java/: Main.java
